# game_theory_labs

./: .gitignore  CMakeLists.txt  README.md  convex_games_solver.cpp  sadovskiy_alg_solver.cpp
LR1/: CMakeLists.txt  README.md
LR1/header/: .matrix_operations.hpp.swp  br_method.hpp  matrix_method.hpp  matrix_operations.hpp  quotient.hpp  vectors.hpp
LR1/source/: .matrix_method.cpp.swp  matrix_method.cpp  solve_by_br_method.cpp  solve_by_matrix_method.cpp  solver.cpp
LR1/tests/: lin_alg_ops_test.cpp  quotient_test.cpp
header/: br_method.hpp  convex_game_solver.hpp  matrix_method.hpp  sadovskiy_algorithm.hpp
header/common/: matrix_operations.hpp
search_games/: search.py
source/: backward_induction.cpp  bimatrix_games.cpp  convex_games_solver.cpp  coop_games.cpp  information_borba.cpp  matrix_br_methods_solver.cpp  sadovskiy_alg_solver.cpp
tests/: lin_alg_ops_test.cpp  matrix_method_test.cpp  quotient_test.cpp
